Issue 45 Stop Flickr from overflowing its content container.

--- a/themes/elmcip/css/fields.css
+++ b/themes/elmcip/css/fields.css
@@ -106,3 +106,7 @@ fieldset .fieldset-description {
 
 .field-name-field-tags {
 }
+
+.file-video-flickr object {
+  width: 100%;
+}
